syntax = "proto3";

package proto_all;

// enum GridSize {
//   NORMAL = 25,
//   LARGE = 50,
// }
// enum PlayerSymbol {
//   X = 'X',
//   O = 'O',
// }

enum ClientMsgType {
    // lobby
    join_lobby = 0;
    lobby_msg = 1;
    create_lobby_game = 2;
    join_lobby_game = 3;
    leave_lobby_game = 4;
    // game
    player_select_cell = 5;
    leave_game = 6;
}
enum ServerMsgType {
    // lobby
    lobby_state = 0;
    player_msg = 1;
    player_join_lobby = 2;
    player_leave_lobby = 3;
    lobby_game_updated = 4;
    // game
    player_join = 5;
    player_left = 6;
    game_start = 7;
    game_end = 8;
    game_player_move = 9;
}

message Player {
    uint32 id = 1;
    uint32 socket_id = 2;
    uint32 player_number = 3;
    string symbol = 4;
    string name = 5;
    bool dead = 6;
    bool ai = 8;
}

enum CellType {
    EMPTY = 0;
    PLAYER_CELL = 1;
}

message Cell {
    uint32 x = 1;
    uint32 y = 2;
    CellType cell_type = 3;
    uint32 player = 4;
}

message LobbyGame {
    string game_id = 1;
    uint32 players = 2;
    uint32 max_players = 3;
}

enum GameStatus {
    WAITING = 0;
    X_TURN = 1;
    O_TURN = 2;
    X_WON = 3;
    O_WON = 4;
    TIE = 5;
}

/* #### Server messages #### */

message LobbyPlayer {
    uint32 player_id = 2;
    string name = 3;
}

message LobbyState {
    repeated LobbyGame games = 1;
    repeated LobbyPlayer players = 2;
}

message GameStart {
    string game_id = 1;
    repeated Player players = 2;
    repeated Cell cells = 3;
}

message GameEnd {
    string game_id = 1;
    GameStatus result = 2;
    optional Player winner = 3;
}

message GameMove {
    uint32 player = 1;
    uint32 x = 2;
    uint32 y = 3;
    // string symbol = 4;
}

/* #### Client messages #### */

// Values are zero if not specified.
message GameOptions {
    uint32 size = 1;
    uint32 players = 2;
}

message PlayerJoinLobby {
    uint32 player_id = 1;
    string name = 2;
}

message PlayerCreateGame {
    uint32 player_id = 1;
    string name = 2;
    string preferred_symbol = 3;
    GameOptions options = 4;
}

message PlayerJoinGame {
    optional string game_id = 1;
    uint32 player_id = 2;
    string name = 3;
    GameOptions options = 4;
}

message PlayerSelectCell {
    string game_id = 1;
    uint32 player_number = 2;
    uint32 x = 3;
    uint32 y = 4;
}

message PlayerLeaveGame {
    string game_id = 1;
    uint32 player_id = 2;
}
