syntax = "proto3";

import "game.proto";

enum ServerMsgType {
    // lobby
    lobby_state = 0;
    player_status = 1;
    player_msg = 2;
    player_join_lobby = 3;
    player_leave_lobby = 4;
    lobby_game_updated = 5;
    // game
    player_join = 6;
    player_left = 7;
    player_disconnected = 8;
    player_reconnected = 9;
    game_start = 10;
    game_end = 11;
    game_player_move = 12;
}

message LobbyPlayer {
    uint32 player_id = 2;
    string name = 3;
}

message LobbyState {
    repeated LobbyGame games = 1;
    repeated LobbyPlayer players = 2;
}

message PlayerStatus {
    repeated string waiting_games = 3;
    repeated GameEnd ended_games = 4;
}

message BoardState {
    string game_id = 1;
    uint32 player_in_turn = 2;
    // uint64 start_time = 2;
    repeated Player players = 3;
    repeated Cell cells = 4;
}

message GameEnd {
    string game_id = 1;
    GameStatus result = 2;
    optional uint32 winner_id = 3;
}

message GameMove {
    uint32 player_number = 1;
    uint32 player_id = 2;
    uint32 x = 3;
    uint32 y = 4;
    // string symbol = 4;
}

message GamePlayerDisconnected {
    string game_id = 1;
    uint32 player_id = 2;
    string symbol = 4;
    string name = 5;
}

message GamePlayerReconnected {
    string game_id = 1;
    uint32 player_id = 2;
}